anishi1222 layered architecture rebuild (#251)
* chore(rearch): complete Foundation phase — migration constitution (t1)

Establishes the 5+1 layer Ports & Adapters model, inward-only dependency
rule, domain purity constraints, port/adapter naming conventions, and the
ArchUnit enforcement contract for the layered-architecture rebuild.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079

* chore(rearch): complete Analysis phase — architecture + behavior baseline (t2, t3)

t2: analyzed 120 files across 15 packages; found 10 dependency cycles (4 more
than recon) and mapped framework leakage (Copilot SDK 20, Micronaut 24,
Jakarta 32, SLF4J 50 files). Produced a full 120-file class-to-layer mapping.

t3: inventoried 69 user-facing behaviors across 8 categories, 4 commands,
4 exit codes, 50+ config keys and 30 templates as the feature parity baseline.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079

* chore(rearch): complete Architecture Design phase — target layers and port catalog (t4)

Designs 6 layers across 24 packages with a 12-interface port catalog (5 inbound,
7 outbound) and maps all 120 files to a target package.

LoadTemplatePort resolves cycles 2/5/7/8/10; domain type relocations
(ReviewResult, AgentConfig, SkillDefinition, SharedCircuitBreaker) resolve
cycles 1/3/4/6/9. All 69 parity behavior IDs are traced to a port.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079

* chore(rearch): complete Planning phase — implementation plan and test strategy (t5)

Breaks the rewrite into 6 implementation phases / 16 tasks (T001-T016) with an
explicit DAG and parallelism markers, sequencing cycle-root types first.

Test strategy is 3-tier: ArchUnit boundary enforcement, regression against the
69-behavior parity baseline, and smoke verificatio